fixed winner text alignment

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ header {
     font-size: 25px;
     font-weight: 550;
     background-color: #6665DD;
-
+    font-family: 'Courier New', Courier, monospace;
 }
 .content {
     height: 92.9vh;
@@ -132,4 +132,12 @@ footer {
     height: 50px;
     width: 150px;
     border-radius: 10px;
+}
+
+.winner {
+    padding: 30px 0 0 0;
+    text-align: center;
+    font-size: x-large;
+    font-weight: 1000;
+    
 }
